--- a/portfolio-site/src/components/ChatInterface/LandingChatSection.less
+++ b/portfolio-site/src/components/ChatInterface/LandingChatSection.less
@@ -50,27 +50,29 @@
       }
     }
 
-    .landingchat-submit {
+  .landingchat-submit {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       width: 2.5rem;
       height: 2.5rem;
-      margin-left: 0.625rem;
-      border: none;
-      border-radius: 50%;
-      background: #fff;
-      // color: #fff;
-      font-size: 1.25rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      color: #000000;
+      padding: 5px;
+      background: rgba(219, 219, 219, 0.5);
+      border-radius: 60%;
+      backdrop-filter: blur(10px);
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
       cursor: pointer;
-      transition: background 0.3s ease;
+      transition: transform 0.3s ease;
 
       &:hover {
-        background: #357abd;
+        background: #ffffff;
       }
     }
-    .landingPageSubmit-icon {
-      z-index: 3000;
+    .landingchat-submit svg {
+      display: block;
+      width: 1.25rem;
+      height: 1.25rem;
     }
   }
 }
