--- a/src/components/mainPage/LandingPage.less
+++ b/src/components/mainPage/LandingPage.less
@@ -24,3 +24,16 @@
   background-color: #333;
   color: #fff;
 }
+
+.container {
+  width: 100%;
+  max-width: 100%;
+  padding: 0;
+}
+
+.content-wrapper {
+  background: #f0f0f05f;
+  border-radius: 2rem;
+  margin-top: 24px;
+  width: 100%;
+  }
